# backend/docs/swagger.yaml
@@ -763,6 +763,250 @@ paths:
               schema:
                 type: string
                 description: The error message
+  /api/1.0/answers/{exerciseId}:
+    get:
+      tags:
+        - answers
+      summary: Get answers
+      description: Use this request to get answers
+      operationId: getAnswers
+      parameters:
+        - name: exerciseId
+          in: path
+          description: The exercise ID
+          required: true
+          schema:
+            type: string
+          example: 2
+        - name: paging
+          in: query
+          description: The paging of the search result
+          required: false
+          schema:
+            type: integer
+            format: int64
+            default: null
+      responses:
+        "200":
+          description: Answers retrieved successfully
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Answer"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: string
+                description: The error message
+
+        "404":
+          description: Exercise not found
+          content:
+            application/json:
+              schema:
+                type: string
+                description: The error message
+              example:
+                message: Exercise not found
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: string
+                description: The error message
+  /api/1.0/answers/upload/{exerciseId}:
+    post:
+      tags:
+        - answers
+      summary: Upload answers
+      description: Use this request to upload answers
+      operationId: uploadAnswers
+      parameters:
+        - name: exerciseId
+          in: path
+          description: The exercise ID
+          required: true
+          schema:
+            type: string
+          example: 2
+      requestBody:
+        description: Answer object that needs to be uploaded
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                content:
+                  type: string
+                  description: The content of the answer
+                image_url:
+                  type: string
+                  format: binary
+                  description: The image of the answer
+      responses:
+        "200":
+          description: Answer uploaded successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Answer"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: string
+                description: The error message
+
+        "404":
+          description: Exercise not found
+          content:
+            application/json:
+              schema:
+                type: string
+                description: The error message
+              example:
+                message: Exercise not found
+        "415":
+          description: No file uploaded
+          content:
+            application/json:
+              schema:
+                type: string
+                description: The error message
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: string
+                description: The error message
+  /api/1.0/answers/details/{answerId}:
+    put:
+      tags:
+        - answers
+      summary: Update answer
+      description: Use this request to update answer
+      operationId: updateAnswer
+      parameters:
+        - name: answerId
+          in: path
+          description: The answer ID
+          required: true
+          schema:
+            type: string
+          example: 2
+      requestBody:
+        description: Answer object that needs to be updated
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                content:
+                  type: string
+                  description: The content of the answer
+                image_url:
+                  type: string
+                  format: binary
+                  description: The image of the answer
+      responses:
+        "200":
+          description: Answer updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Answer"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: string
+                description: The error message
+
+        "404":
+          description: Answer not found
+          content:
+            application/json:
+              schema:
+                type: string
+                description: The error message
+              example:
+                message: Answer not found
+        "415":
+          description: No file uploaded
+          content:
+            application/json:
+              schema:
+                type: string
+                description: The error message
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: string
+                description: The error message
+    delete:
+      tags:
+        - answers
+      summary: Delete answer
+      description: Use this request to delete answer
+      operationId: deleteAnswer
+      parameters:
+        - name: answerId
+          in: path
+          description: The answer ID
+          required: true
+          schema:
+            type: string
+          example: 2
+      responses:
+        "200":
+          description: Answer deleted successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Answer"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: string
+                description: The error message
+
+        "404":
+          description: Answer not found
+          content:
+            application/json:
+              schema:
+                type: string
+                description: The error message
+              example:
+                message: Answer not found
+        "415":
+          description: No file uploaded
+          content:
+            application/json:
+              schema:
+                type: string
+                description: The error message
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: string
+                description: The error message
 components:
   schemas:
     Exam:
@@ -933,6 +1177,40 @@ components:
             type: string
             example: https://example.com/image.jpg
           description: The images of the exercise
+    Answer:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1
+          description: The answer ID
+        exercise_id:
+          type: integer
+          format: int64
+          example: 1
+          description: The exercise ID
+        content:
+          type: string
+          example: 4
+          description: The content of the answer
+        creator_id:
+          type: integer
+          format: int64
+          example: 1
+          description: The creator ID of the answer
+        created_at:
+          type: string
+          example: 2020-01-01 00:00:00
+          description: The created time of the answer
+        updated_at:
+          type: string
+          example: 2020-01-01 00:00:00
+          description: The updated time of the answer
+        image_url:
+          type: string
+          example: https://example.com/image.jpg
+          description: The image of the answer
   securitySchemes:
     bearerAuth:
       type: http
